Fix a bug where the legends in the advanced editor wouldn't be legible

--- a/app/assets/stylesheets/layouts/management/l-widget-creation.scss
+++ b/app/assets/stylesheets/layouts/management/l-widget-creation.scss
@@ -40,7 +40,10 @@
         width: 100%;
         margin-top: 40px;
         z-index: 1;
+      }
 
+      .c-we-widget-editor,
+      .c-we-chart {
         .c-we-vega-chart-legend {
           // Bootstrap default styles mess up with the
           // chart's legend
